# AimRT

./: CMakeLists.txt  build.sh  test.sh
.github/workflows/: build.yml  daily.yml  daily_task.yml  test.yml
cmake/: EnsureRustToolchain.cmake  GetIceoryx2.cmake
docker/: Dockerfile.test  run_docker_test.sh  test_build.sh
src/examples/plugins/: CMakeLists.txt
src/examples/plugins/iceoryx2_plugin/: CMakeLists.txt  README.md
src/plugins/iceoryx2_plugin/: CMakeLists.txt  README.md  iceoryx2_channel_backend.cc  iceoryx2_channel_backend.h  iceoryx2_plugin.cc  iceoryx2_plugin.h  iceoryx2_subscriber.h
src/plugins/iceoryx2_plugin/test/: iceoryx2_plugin_test.cc
src/plugins/record_playback_plugin/: record_action.cc
src/test/cases/plugins/iceoryx2_plugin/: examples_plugins_iceoryx2_plugin_pb_chn.yaml  test_plugins_iceoryx2.py
src/tools/package_aimrt_py/: CMakeLists.txt
